#447 - Add COUNT search projection for POST /search
Add the OpenAPI search projection, implement COUNT support, and remove DocumentItem from document search results.